@@ -1,0 +1,31 @@
+<!--
+   java javaclients.script.XmlScript -requestFile LoginLogoutSubscribe.xml
+-->
+
+
+<xmlBlaster>
+
+   <connect>
+     <qos>
+       <securityService type="htpasswd" version="1.0"><![CDATA[
+         <user>tester</user>
+         <passwd>tester</passwd>
+       ]]></securityService>
+       <persistent>false</persistent>
+       <session name='tester/1' />
+       <queue relating='connection'><address pingInterval='1000' retries='-1' delay='2000' /></queue>
+       <queue relating='callback' maxEntries='5' maxEntriesCache='2'><callback pingInterval='1000' retries='-1' delay='1000' /></queue>
+     </qos>
+  </connect>
+
+  <subscribe><key oid="__sys__Login"></key><qos><persistent>false</persistent></qos></subscribe>
+  <subscribe><key oid="__sys__Logout"></key><qos><persistent>false</persistent></qos></subscribe>
+  <!-- wait for two minutes before shutdown -->
+
+  <wait delay="60000" />
+  <unSubscribe><key oid="__sys__Login"/></unSubscribe>
+  <unSubscribe><key oid="__sys__Logout"/></unSubscribe>
+  <wait delay="1000" />
+  <disconnect />
+</xmlBlaster>
+
